The version number is hardcoded into sdparm.c (in a C string);
the rpm spec file: sdparm.spec ; the debian/changelog file;
and the configure.ac file (in the AC_INIT item).

ChangeLog for pre-release sdparm-1.13 [20230327] [svn: r374]
  - add --json[=JO] and --js-file=JFN options
    - apart from with a real device, json output can be
      requested with --enumerate or --inhex=FN
  - control extension mpage: add pwromact, hrdrmact, ssumact
    and fmtmact fields
  - format presets vpd: expand for schema type 4
  - the --get=STR option can be used with --enumerate or
    --inhex=FN option
  - block device characteristics vpd: add MACT field
  - improve handling of ZBC disks with pdt=0x14
  - zoned block device characteristics vpd: add Zone
    alignment method and Zone starting LBA granularity
    fields [zbc2r11,zbc2r12]
  - add CAPPID bit in device-specific paramter field
  - add --inner-hex option to take overloading from --hex
  - device identification VPD page: change IEEE OUI to AOI
  - act on LAST bit in App tag mpage descriptors to stop
    output of further descriptors, override this
    truncation with --flexible option
  - point svn:externals to sg3_utils revision 1018
  - autoconf: upgrade version 2.70 to 2.71; automake upgrade
    to version 1.16.5
  - remove the imtermediate files generated by ./autogen.sh
    - this reduces size of svn and git repositories but still
      plan to have these intermediate files in release tarballs
  - add boostrap script that just calls ./autogen.sh

ChangeLog for released sdparm-1.12 [20210421] [svn: r347]
  - add Command duration limits T2A and T2B mpages
  - add Sequestered command fields in Control extension mpage
  - SAS/SPL disconnect-reconnect mpage: BILUNIT and CTLUNIT
    fields added (21-021r3)
  - vpd: SCSI Feature Sets [0x92]: add ZBC feature sets
  - add SAT ATA Feature control mpage (20-085r4)
  - block device char vpd page: add zoned strings
  - expand Out of band management control mpage (spl5r08)