@@ -2,7 +2,7 @@ The version number is hardcoded into sdparm.c (in a C string);
 the rpm spec file: sdparm.spec ; the debian/changelog file;
 and the configure.ac file (in the AC_INIT item).
 
-ChangeLog for pre-release sdparm-1.13 [20230327] [svn: r374]
+ChangeLog for pre-release sdparm-1.13 [20230329] [svn: r375]
   - add --json[=JO] and --js-file=JFN options
     - apart from with a real device, json output can be
       requested with --enumerate or --inhex=FN
@@ -18,11 +18,12 @@ ChangeLog for pre-release sdparm-1.13 [20230327] [svn: r374]
     fields [zbc2r11,zbc2r12]
   - add CAPPID bit in device-specific paramter field
   - add --inner-hex option to take overloading from --hex
+    - use with -j for more searchable mode page names
   - device identification VPD page: change IEEE OUI to AOI
   - act on LAST bit in App tag mpage descriptors to stop
     output of further descriptors, override this
     truncation with --flexible option
-  - point svn:externals to sg3_utils revision 1018
+  - point svn:externals to sg3_utils revision 1020
   - autoconf: upgrade version 2.70 to 2.71; automake upgrade
     to version 1.16.5
   - remove the imtermediate files generated by ./autogen.sh
